3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fux bug #1841391: Item Power and pickup bug.
 common/object.c: check item_power for merging test.
Nicolas Weeger 2007-12-01

Fix bug #1833943: Buffer overflow in item power calculation.
 include/define.h: MAX_WEAPON_ITEM_POWER set to 100.
 server/apply.c: change enchant logic to not enchant already powerful items.
 server/gods.c: make god refuse to enchant an already powerful item.
Nicolas Weeger 2007-12-01

Update the treasure list so the different types of Potions
of Life show up in shops.
 lib/treasures
Rick Tanner 2007-11-08

Display information for weather even if turned off.
 lib/weather.c
Andreas Kirschbaum 2007-11-07

Fix collect script to not insert editor_folder lines into nested inventory
objects.
 lib/collect.pl.in
Andreas Kirschbaum 2007-11-03

Adapt alchemy formulas to changed archetypes.
 lib/formulae: rename "shoes" to "pair of shoes".
Andreas Kirschbaum 2007-11-03

Fix for bug #1693250: loader.c isn't correctly generated.
 configure.ac: remove AM_MAINTAINER_MODE macro, no one remembers
  why it was set.
Nicolas Weeger 2007-10-27

Fix for bug #1815251: Multiple 'the' displayed in party who.
Moved player listing code to own function, call it from command_who and party who.
Move 'who' format checking to load_settings().
 include/sproto.h
 server/c_misc.c c_party.c init.c
Nicolas Weeger 2007-10-20

common/map.c: Add misisng call to unlink() empty unique maps.  Fixes bug
  1799361 - Permadeath corpse reproduction.  Bug is more general - any unique
  object could be duplicated, so long as it was the only unique object on
  the map.
MSW 2007-10-03
